fix: отредактировал gap в .list

--- a/styles/style.css
+++ b/styles/style.css
@@ -387,7 +387,7 @@
   }
 
   .list {
-    gap: 47.2px;
+    gap: 49px;
   }
 
   .card-img {
